# M1_RemoteBackup

./: CMakeLists.txt
BACKUP_CLIENT/FoldersTest/Riccardo_Client/TextFiles/: testo.txt
Client/: client.cpp  client.h  main.cpp
Client/FileSystemWatcher/: file_system_watcher.cpp  file_system_watcher.h
Client/ThreadGuard/: thread_guard.hpp
Common/SharedList/: shared_list.hpp
Common/SharedMap/: shared_map.hpp
Common/SharedSet/: shared_set.hpp
Common/ThreadGuard/: thread_guard.cpp  thread_guard.h
Common/Utils/: utils.cpp  utils.h
FoldersTest/Riccardo/: testox2.txt
FoldersTest/Riccardo_Client/AlreadyServerSide/: ServerHasThisFile.txt
FoldersTest/Riccardo_Client/TextFiles/: testo.txt
Server/: main.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
Server/Database/: TestCredentials.txt  toolsOnline.txt  users.db
Server/Database/DAO/: dao.cpp  dao.h
Server/Users/Riccardo/: EmptyFile.txt  toDelete.txt
